--- a/client/web/src/styles/globals.css
+++ b/client/web/src/styles/globals.css
@@ -25,6 +25,15 @@
     border-radius: 99999px;
   }
 
+  .default-transition {
+    transition: scale cubic-bezier(0.68, -0.6, 0.32, 1.6) 0.4s,
+      background-color linear 0.3s, box-shadow linear 0.3s;
+  }
+
+  .default-transition:hover {
+    scale: 1.1;
+  }
+
   .button-hover {
     transition: scale cubic-bezier(0.68, -0.6, 0.32, 1.6) 0.4s,
       background-color linear 0.3s, box-shadow linear 0.3s;
@@ -37,5 +46,28 @@
   .error-anim {
     transition: transform cubic-bezier(0.34, 1.56, 0.64, 1) 0.5s,
       opacity linear 0.3s;
+  }
+
+  .nav-button::before {
+    content: "";
+    inset: 0;
+    position: absolute;
+    background-color: #a855f7;
+    z-index: -10;
+    border-radius: 99999px;
+    scale: 0;
+    opacity: 0;
+    transition: scale 0.5s cubic-bezier(0.34, 1.56, 0.64, 1),
+      opacity 0.2s linear, shadow 0.5s linear;
+  }
+
+  .nav-button:hover {
+    text-shadow: 0px 0px 15px #a855f7;
+  }
+
+  .nav-button:hover::before {
+    scale: 1;
+    opacity: 0.15;
+    box-shadow: 0px 0px 30px 2px #a855f7;
   }
 }
