--- a/client/web/src/styles/globals.css
+++ b/client/web/src/styles/globals.css
@@ -70,4 +70,9 @@
     opacity: 0.15;
     box-shadow: 0px 0px 30px 2px #a855f7;
   }
+
+  .footer {
+    background: a855f7;
+    background: linear-gradient(135deg, #753aff 0%, #c534ff 100%);
+  }
 }
