--- a/client/web/src/styles/globals.css
+++ b/client/web/src/styles/globals.css
@@ -2,52 +2,52 @@
 @tailwind components;
 @tailwind utilities;
 
+body::-webkit-scrollbar-thumb {
+  background-color: #a855f7;
+  border-radius: 999999px;
+}
+body::-webkit-scrollbar {
+  background-color: #28123b;
+  width: 6px;
+}
+
 @layer utilities {
   .bg-join-card {
     background: #8400ff;
     background: radial-gradient(at center top, #8400ff33 0%, #00000000 75%);
   }
-
   .bg-chat-card {
     background: #8400ff;
     background: radial-gradient(at left center, #8400ff33 0%, #00000000 50%);
   }
-
   .chat-scroll::-webkit-scrollbar-thumb {
     background-color: #a955f777;
     border-radius: 99999px;
   }
-
   .chat-scroll::-webkit-scrollbar {
     width: 4px;
     background-color: transparent;
     background-color: #d19fff13;
     border-radius: 99999px;
   }
-
   .default-transition {
     transition: scale cubic-bezier(0.68, -0.6, 0.32, 1.6) 0.4s,
       background-color linear 0.3s, box-shadow linear 0.3s;
   }
-
   .default-transition:hover {
     scale: 1.1;
   }
-
   .button-hover {
     transition: scale cubic-bezier(0.68, -0.6, 0.32, 1.6) 0.4s,
       background-color linear 0.3s, box-shadow linear 0.3s;
   }
-
   .button-hover:hover {
     scale: 1.1;
   }
-
   .error-anim {
     transition: transform cubic-bezier(0.34, 1.56, 0.64, 1) 0.5s,
       opacity linear 0.3s;
   }
-
   .nav-button::before {
     content: "";
     inset: 0;
@@ -60,17 +60,14 @@
     transition: scale 0.5s cubic-bezier(0.34, 1.56, 0.64, 1),
       opacity 0.2s linear, shadow 0.5s linear;
   }
-
   .nav-button:hover {
     text-shadow: 0px 0px 15px #a855f7;
   }
-
   .nav-button:hover::before {
     scale: 1;
     opacity: 0.15;
     box-shadow: 0px 0px 30px 2px #a855f7;
   }
-
   .footer {
     background: a855f7;
     background: linear-gradient(135deg, #753aff 0%, #c534ff 100%);
