--- a/client/web/src/styles/globals.css
+++ b/client/web/src/styles/globals.css
@@ -78,6 +78,8 @@ body::-webkit-scrollbar {
   }
   .image-shadow {
     filter: drop-shadow(3px 3px 10px #000000);
-    /* filter: drop-shadow(3px 3px 3px #a955f721); */
+  }
+  .logo {
+    filter: drop-shadow(0px 0px 20px #a855f7);
   }
 }
