--- a/client/web/src/styles/globals.css
+++ b/client/web/src/styles/globals.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+/* TODO: Reduce css */
+
 body::-webkit-scrollbar-thumb {
   background-color: #a855f7;
   border-radius: 999999px;
