--- a/client/web/src/styles/globals.css
+++ b/client/web/src/styles/globals.css
@@ -144,4 +144,19 @@ body::-webkit-scrollbar {
   .image-profile {
     filter: drop-shadow(0px 0px 20px #000000ad);
   }
+  @media not all and (min-width: 1024px) {
+    .profile-card-image::after {
+      width: 100%;
+      height: 28%;
+      left: 0;
+      transform: skewX(0);
+      box-shadow: 0px 0px 30px #ffffff60;
+    }
+    .profile-card-image::before {
+      width: 100%;
+      height: 28%;
+      left: 0;
+      transform: skewX(0);
+    }
+  }
 }
