--- a/client/web/src/styles/globals.css
+++ b/client/web/src/styles/globals.css
@@ -159,4 +159,18 @@ body::-webkit-scrollbar {
       transform: skewX(0);
     }
   }
+  .loader {
+    width: 20px;
+    aspect-ratio: 1.154;
+    --_g: no-repeat radial-gradient(farthest-side, #ffffff 90%, #ffffff00);
+    background: var(--_g) 50% 0, var(--_g) 0 100%, var(--_g) 100% 100%;
+    background-size: 35% calc(35% * 1.154);
+    animation: l16 1s infinite;
+  }
+  @keyframes l16 {
+    50%,
+    100% {
+      background-position: 100% 100%, 50% 0, 0 100%;
+    }
+  }
 }
